--- a/home.html
+++ b/home.html
@@ -21,6 +21,8 @@
 
 
     <div class="home-contenedor">
+      <div class="abeja" id="abeja"></div>
+
         <h1>THIS IS: <strong>CODEHIVE</strong></h1>
         <a href="#card-acerca-de"><button class="btn-sobre-nosotros">¿Quiénes somos?</button></a>
     </div>
@@ -115,10 +117,10 @@
             <div class="habilidades">
               <p class="habilidad">Desarrollo Web</p>
               <p class="habilidad">Comunicación efectiva</p>
-              <p class="habilidad">Virgen</p>
-              <p class="habilidad">Semental</p>
-              <p class="habilidad">Madre de 2</p>
-              <p class="habilidad">LGBT</p>
+              <p class="habilidad">Trabajo en equipo</p>
+              <p class="habilidad">FrontEnd</p>
+              <p class="habilidad">GYM</p>
+              <p class="habilidad">Comer y Dormir</p>
               <p class="habilidad">Idioma Español - Ingles</p>
             </div>
           </figcaption>
@@ -126,13 +128,13 @@
 
         <figure class="snip1344 hover"><img src="assets/Erick.jpeg" alt="profile-sample7" class="background"/><img src="assets/Erick.jpeg" alt="profile-sample7" class="profile"/>
           <figcaption>
-            <h3>Erick Sánchez Martínez<span>Software Engineer</span><span>@uaz.edu.mx</span></h3>
+            <h3>Erick Sánchez Martínez<span>Software Engineer</span><span>39204127@uaz.edu.mx</span></h3>
             <div class="habilidades">
               <p class="habilidad">Desarrollo Web</p>
               <p class="habilidad">Compromiso con la calidad</p>
-              <p class="habilidad">Gordofobico</p>
-              <p class="habilidad">N</p>
-              <p class="habilidad">Cis Hetero</p>
+              <p class="habilidad">Seguridad en Redes</p>
+              <p class="habilidad">Gamer</p>
+              <p class="habilidad">Desarrollo móvil</p>
               <p class="habilidad">Idioma Español - Ingles</p>
             </div>
           </figcaption>
@@ -145,19 +147,22 @@
               <p class="habilidad">Desarrollo Web</p>
               <p class="habilidad">Comunicación efectiva</p>
               <p class="habilidad">Drag Queen</p>
-              <p class="habilidad">Heterofobico</p>
-              <p class="habilidad">Racista</p>
+              <p class="habilidad">Seguridad en Redes</p>
+              <p class="habilidad">Desarrollo Móvil</p>
               <p class="habilidad">Programador de la india</p>
               <p class="habilidad">Idioma Español - Ingles</p>
             </div>
           </figcaption>
         </figure>
 
-        <figure class="snip1344"><img src="assets/perfil.jpg" alt="profile-sample6" class="background"/><img src="assets/perfil.jpg" alt="profile-sample6" class="profile"/>
+        <figure class="snip1344"><img src="assets/alejandro.jpg" alt="profile-sample6" class="background"/><img src="assets/alejandro.jpg" alt="profile-sample6" class="profile"/>
           <figcaption>
-            <h3>Omar Alejandro de la Cruz Razo<span>Software Engineer</span><span>@uaz.edu.mx</span></h3>
+            <h3>Omar Alejandro de la Cruz Razo<span>Software Engineer</span><span>36172889@uaz.edu.mx</span></h3>
             <div class="habilidades">
               <p class="habilidad">Desarrollo Web</p>
+              <p class="habilidad">Desarrollo móvil</p>
+              <p class="habilidad">Innovación y creatividad</p>
+              <p class="habilidad">Desarrollo móvil</p>
               <p class="habilidad">Idioma Español - Ingles</p>
             </div>
           </figcaption>
@@ -168,9 +173,10 @@
             <h3>Joseph Antuan Martínez Alvarado<span>Software Engineer</span><span>36174029@uaz.edu.mx</span></h3>
             <div class="habilidades">
               <p class="habilidad">Desarrollo Web</p>
+              <p class="habilidad">Seguridad en Redes</p>
               <p class="habilidad">Metalero</p>
-              <p class="habilidad">Hetero</p>
-              <p class="habilidad">Homofobico</p>
+              <p class="habilidad">Comunicación efectiva </p>
+              <p class="habilidad">BackEnd</p>
               <p class="habilidad">Idioma Español - Ingles</p>
             </div>
         </figure>
